# enterprise-knowledge-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260430_1500_0001_initial_schema.py  20260501_1000_0002_text_search.py
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  bedrock.py  db.py  embeddings.py  storage.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  documents.py  health.py
backend/app/core/: errors.py  logging.py
backend/app/models/: __init__.py  base.py  chunk.py  document.py
backend/app/prompts/: system.py
backend/app/schemas/: __init__.py  chat.py  document.py
backend/app/services/: __init__.py  chunker.py  generation.py  ingestion.py  parser.py  retrieval.py
backend/scripts/: bedrock_smoke_test.py  chat_smoke_test.py  embedding_smoke_test.py  storage_smoke_test.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_api.py  test_documents_api.py  test_retrieval.py
backend/tests/unit/: test_chunker.py  test_embeddings.py  test_generation.py  test_health.py  test_ingestion.py  test_parser.py  test_retrieval.py
docs/: README.md  api.md  architecture.md  cost.md  demo-script.md  deployment.md  design-decisions.md  evaluation.md  github-setup.md  interview-prep.md  resume-bullets.md  security.md
docs/diagrams/: README.md  deployment-topology.mmd  ingestion-flow.mmd  query-flow.mmd  system-architecture.mmd
evals/: eval_lib.py  run_eval.py  seed.py
evals/datasets/: golden_qa.jsonl
evals/reports/: 20260506T030949_baseline.json  20260506T030949_baseline.md  20260506T031331_baseline.json  20260506T031331_baseline.md  20260506T123333_topk1.json  20260506T123333_topk1.md  comparison_baseline_vs_topk1.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
sample_docs/: README.md  employee_handbook.md  helpdesk_sop.md  it_security_policy.md
scripts/db/: init.sql
(+3 files in other folders)
