[project]
name = "eka-backend"
version = "0.1.0"
description = "Backend API for the Enterprise Knowledge Assistant"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Dani" }]
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Logging
    "structlog>=24.4.0",
    # AWS
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    # Database
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # Document parsing
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    # Chunking + embeddings
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.8.0",
    "fastembed>=0.4.2",
    # HTTP client
    "httpx>=0.27.0",
    # SSE responses
    "sse-starlette>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    # Used to synthesize fixture PDFs at test time so we don't commit binaries.
    "reportlab>=4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
